; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_pcb.c_in_getsockaddr_s.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_pcb.c_in_getsockaddr_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.sockaddr_in = type { i32, i32, i32, i32 }
%struct.inpcb = type { i32, i32 }

@AF_INET = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @in_getsockaddr_s(%struct.socket* %0, %struct.sockaddr_in* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.socket*, align 8
  %5 = alloca %struct.sockaddr_in*, align 8
  %6 = alloca %struct.sockaddr_in*, align 8
  %7 = alloca %struct.inpcb*, align 8
  store %struct.socket* %0, %struct.socket** %4, align 8
  store %struct.sockaddr_in* %1, %struct.sockaddr_in** %5, align 8
  %8 = load %struct.sockaddr_in*, %struct.sockaddr_in** %5, align 8
  store %struct.sockaddr_in* %8, %struct.sockaddr_in** %6, align 8
  %9 = load %struct.sockaddr_in*, %struct.sockaddr_in** %5, align 8
  %10 = icmp ne %struct.sockaddr_in* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @VERIFY(i32 %11)
  %13 = load %struct.sockaddr_in*, %struct.sockaddr_in** %5, align 8
  %14 = call i32 @bzero(%struct.sockaddr_in* %13, i32 16)
  %15 = load i32, i32* @AF_INET, align 4
  %16 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %17 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %16, i32 0, i32 3
  store i32 %15, i32* %17, align 4
  %18 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %19 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %18, i32 0, i32 0
  store i32 16, i32* %19, align 4
  %20 = load %struct.socket*, %struct.socket** %4, align 8
  %21 = call %struct.inpcb* @sotoinpcb(%struct.socket* %20)
  store %struct.inpcb* %21, %struct.inpcb** %7, align 8
  %22 = icmp eq %struct.inpcb* %21, null
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* @EINVAL, align 4
  store i32 %24, i32* %3, align 4
  br label %36

25:                                               ; preds = %2
  %26 = load %struct.inpcb*, %struct.inpcb** %7, align 8
  %27 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %30 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %29, i32 0, i32 2
  store i32 %28, i32* %30, align 4
  %31 = load %struct.inpcb*, %struct.inpcb** %7, align 8
  %32 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %35 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %34, i32 0, i32 1
  store i32 %33, i32* %35, align 4
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %25, %23
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @bzero(%struct.sockaddr_in*, i32) #1

declare dso_local %struct.inpcb* @sotoinpcb(%struct.socket*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
